--- a/README.org
+++ b/README.org
@@ -4,6 +4,8 @@
 
 
 
+keywords: [[https://srfi.schemers.org/?keywords=features][Features]]
+
 This repository hosts [[https://srfi.schemers.org/srfi-55/][SRFI 55]]: require-extension, a [[https://srfi.schemers.org/][Scheme Request for Implementation]].
 
 This SRFI is in /final/ status.
